src/test/deca/codegen/valid/without_class/add_overflow_int.deca
// Description:
// 	  Teste l'overflow entre deux entiers (valide)
// Resultats:
//
//
// Historique:
// 	  cree le /01/2023
{
    int x = 2147483647;
    int z = x + x;
}