src/test/deca/codegen/invalid/without_class/add_overflow_float.deca
// Description:
// 	  Test l'overflow pour l'ajout de flottants
//
// Resultats:
//  Number overflow
//  line 11
// Historique:
// 	  cree le /01/2023
{
    float x = 3.402823466e+38;
    float z = x+x;
}